# client-server-demo

./: README.md  build.gradle  gradle.properties  pom.xml  settings.gradle  webdev.md
cpp/: README.md
cpp/DemoServer/: CMakeLists.txt
cpp/DemoServer/src/: CMakeLists.txt  TuneSimulator.cpp  TuneSimulator.h  demoserver.cpp  demoserver.h  root.cpp  root.h  tunecontroller.cpp  tunecontroller.h
demo-client/: build.gradle  gradle.properties  pom.xml
demo-client/src/main/java/io/github/kaifox/gsi/demo/client/api/: TuneControlClient.java  TuneReceiver.java
demo-client/src/main/java/io/github/kaifox/gsi/demo/client/conf/: CommonGuiConfiguration.java  ConfigValues.java  (+1 more)
demo-client/src/main/java/io/github/kaifox/gsi/demo/mains/: MoleWebClient.java  PureRestDemo.java  RestAndWsClient.java  TuneClient.java  WebfluxTuneClient.java
demo-commons/: build.gradle  generate-web.bat  gradle.properties  pom.xml
demo-commons/src/main/proto/: tune.proto
demo-server/: build.gradle  gradle.properties  pom.xml
demo-server/grpc/: Dockerfile  envoy.yaml  grpc-develop.md
demo-server/src/main/resources/: logback-spring.xml
demo-server/src/main/resources/static/: bundle.js  chroma.js  debug.html  index.html  package-lock.json  package.json  server.bat  tune_grpc_web_pb.js  tune_pb.js  ui.js
demo-server/src/test/java/io/github/kaifox/gsi/demo/: FluxMapManagementTest.java  NamedFluxManagingService.java
python-server/: README.md  python-server.py
python/python-client/: README.md  rest-client.py
python/python-server/: README.md
python/python-server/static/: index.html  ui.js
(+109 files in other folders)
